v1.7.15 (25/09/2020)
- added option to ignore GELLY sanity check in BUSTER

v1.7.14 (24/09/2020)
- added option for ligand occupancy refinement in BUSTER
- XChemCootBuster: reading of (2)fofc.maps disabled because Coot 0.9 does not handle P1 maps well

v1.7.13 (23/09/2020)
- bug fix: use wavelength read from (.free).mtz during model MMCIF preparation when updating SF MMCIF

v1.7.12 (14/09/2020)
- bug fix: problem with recognizing AIMLESS logfiles during preparation of MMCIF files
- bug fix: try finding experimental wavelength from .free.mtz file if it is 0.0 in refine.mtz during MMCIF file preparation
- preparation of mmcif files: catch and report missing event mtz files

v1.7.11 (09/09/2020)
- bug fix: preparation of mmcif files: run aimless in onlymerge mode if only json file available

v1.7.10 (08/09/2020)
- bug fix - preparation of mmcif files for deposition: enable usage of event mtz files which were generated during 'BUSTER' export routine

v1.7.9 (03/09/2020)
- change 'Open COOT' to 'Open COOT - REFMAC refinement -' in Refinement action box

v1.7.8 (01/09/2020)
- bug fix: string formatting error during restraints generation on local machine
- added scanchirals option to rhofit command in fit_ligands function
- bug fix: added 'module load buster' to fit_ligands function

v1.7.7 (22/07/2020)
- bug fix: logical error in creation of restraints script when adding 'module load ccp4/phenix' command
- removed phenix.reduce step from restraints generation

v1.7.6 (22/07/2020)
- bug fix: added 'module load ccp4/phenix' to restraints script in case not part of user bashrc file

v1.7.5 (21/07/2020)
- bug fix: remove obsolete 'module load mx' statement from xce_<restraints_prg> script which currently loads a gemmi incompatible ccp4 version

v1.7.4 (21/07/2020)
- bug fix: selected results not linked after parsing of auto-processing results
- enabled updates of message & progress bar during scoring of auto-processing results