@@ -1,5 +1,6 @@
 v1.7.15 (25/09/2020)
 - added option to ignore GELLY sanity check in BUSTER
+- added option to ignore GELLY sanity check during pandda export with BUSTER
 
 v1.7.14 (24/09/2020)
 - added option for ligand occupancy refinement in BUSTER
